Pending changes in the mainline
===============================

Maintenance
-----------

* Enforce the existence of the patient/study/instance while creating its archive


version 1.11.3 (2023-02-03)
===========================

General
-------

* C-Store SCU now gives priority to the preferred TransferSyntax proposed by the receiving SCP
  instead of Orthanc own AcceptedTransferSyntaxes.
* Made the default SQLite DB more robust wrt future updates like adding new columns in DB.
* Made the HTTP Client errors more verbose by including the url in the logs.
* Optimization: now using multiple threads to transcode files for asynchronous download of studies archive.
* New configuration "KeepAliveTimeout" with a default value of 1 second.
* ResourceModification jobs (/modify + /anonymize) can now use multiple threads to speed up processing
  - New configuration "JobsEngineThreadsCount.ResourceModification" to configure the number of threads.
* For systems using glibc > 2.8 (most of Linux systems except LSB binaries):
  Introduced a new Housekeeper thread in Orthanc (different from the Housekeeper sample plugin).  This thread
  regularly try to give back memory that Orthanc no longer uses to the system.  This reduces the overall memory
  consumption.  More information in  OrthancServer/Resources/ImplementationNotes/memory_consumption.txt.

REST API
--------

* API version upgraded to 19
* Loosen the sanity checks for DICOM modifications, if "Force" option is given:
  - allow modification of PatientID at study level
  - allow modification of PatientID, StudyInstanceUID at series level
  - allow modification of PatientID, StudyInstanceUID, SeriesInstanceUID at instance level
  - allow modification of a patient without changing her PatientID
  Added sanity checks for modifications to make sure the user preserves the DICOM model when modifying high level tags.
    E.g. if you modify the PatientID at study level, also make sure to modify all other Patient related